2009-08-17	Tim Adye <T.J.Adye@rl.ac.uk>

	* Palm/Datebook.pm: add support for the newer-format Palm Calendar
	databases.

2007-07-30 brian d foy <bdfoy@cpan.org>
	* cleaned up the pod coverage test.
	* add License and Author stuff to the distro

2007-01-15	brian d foy <bdfoy@cpan.org>

	* chromatic sent me some changes living in another distro
	(p5-Palm-1.004_000). It catches up 1.003_000 for all of the
	changes since November 2002 listed in this file.
	
2007-01-13	brian d foy <bdfoy@cpan.org>

	* Cleansed the dist to make it installable by CPAN tools.
	It just needs a version without a _ in it.
	(http://rt.cpan.org/Ticket/Display.html?id=12837)
	
2004-04-15 21:21  christophe

	* Palm/PDB.pm, util/pdbdump: Added some logic to detect broken
	databases during loading:
	
	- database names _must_ contain the terminating NUL within the
	first 32 characters of the header. This catches obviously broken
	situations like text files renamed to .pdb files (which, oddly
	enough, happens a lot when you're trying to process text files into
	Doc files).
	
	- position offsets mustn't go beyond the end of the database file
	($pdb->{_size}).  This indicates either truncation of the db or
	straight corruption.

2004-04-08 22:55  christophe

	* Palm/PDB.pm: make it impossible to create a nameless database. It
	can't be uploaded to the PDA, that's for sure.

2003-11-09 20:40  azummo

	* Palm/PDB.pm: Handle uniqueID and uniqueIDseed in the Palm OS way.

2003-11-05 15:19  azummo

	* Palm/DateTime.pm: Fixed ISO8601 format in palmtime_to_iso8601
	Minor stylistical changes

2003-10-10 19:19  azummo

	* Palm/Datebook.pm: Fixed alarm documentation (Christophe
	Beauregard)

2003-10-10 07:01  azummo

	* Palm/PDB.pm: Implemented remove_Record() method. Fixed dirty
	flags handling.
	
	(Christophe Beauregard)

2003-10-10 06:51  azummo

	* Palm/PDB.pm: Added is_Dirty method (Christophe Beauregard).

2003-09-16 18:59  azummo

	* MANIFEST, README: Updated in preparation for the new release.
